--- a/index.html
+++ b/index.html
@@ -3,10 +3,55 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>leatherly-luxe-cart</title>
-    <meta name="description" content="Lovable Generated Project" />
-    <meta name="author" content="Lovable" />
-    <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+    <title>SHFeet | Handmade Footwear Crafted for Comfort & Style</title>
+    <meta
+      name="description"
+      content="Step into timeless comfort and style with SH FEET. Our handcrafted footwear is uniquely designed for elegance, durability, and all-day wearability. Explore our premium collection of bespoke shoes today!"
+    />
+    <meta
+      name="keywords"
+      content="handmade footwear, bespoke shoes, custom sandals, leather shoes, SH FEET, shfeet, SHFEET, sh_feet, SH_FEET,  sustainable footwear, comfortable shoes, stylish footwear, abuja footwear, nigerian footwear, nigerian shoes"
+    />
+    <meta name="author" content="SH FEET Team" />
+
+    <!-- Open Graph / Facebook -->
+    <meta
+      property="og:title"
+      content="SH FEET | Handmade Footwear Crafted for Comfort & Style"
+    />
+    <meta
+      property="og:description"
+      content="Elevate your style with SH FEET's handcrafted footwear. Every pair is designed to combine art, comfort, and sophistication. Discover our collection!"
+    />
+    <meta
+      property="og:image"
+      content="https://res.cloudinary.com/daxeovezx/image/upload/w_1200,h_630,c_fill,q_auto,f_auto/v1732570642/shfeet_logo_l2iun6.jpg"
+    />
+    <meta property="og:url" content="https://shfeet.com.ng" />
+    <meta property="og:type" content="website" />
+    <meta property="og:site_name" content="SH FEET" />
+
+    <!-- Twitter -->
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta
+      name="twitter:title"
+      content="SH FEET | Handmade Footwear Crafted for Comfort & Style"
+    />
+    <meta
+      name="twitter:description"
+      content="Experience unmatched elegance and comfort with SH FEET's bespoke footwear. Explore our range of handcrafted shoes today!"
+    />
+    <meta
+      name="twitter:image"
+      content="https://res.cloudinary.com/daxeovezx/image/upload/w_1200,h_630,c_fill,q_auto,f_auto/v1732570642/shfeet_logo_l2iun6.jpg"
+    />
+
+    <!-- Additional Meta for Enhanced SEO -->
+    <link rel="canonical" href="https://shfeet.com.ng" />
+    <meta name="distribution" content="global" />
+    <meta name="rating" content="general" />
+    <meta name="subject" content="Handmade Footwear" />
+    <meta name="revisit-after" content="7 days" />
   </head>
 
   <body>
