--- a/index.html
+++ b/index.html
@@ -3,61 +3,99 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>SHFeet | Handmade Footwear Crafted for Comfort & Style</title>
-    <meta
-      name="description"
-      content="Step into timeless comfort and style with SH FEET. Our handcrafted footwear is uniquely designed for elegance, durability, and all-day wearability. Explore our premium collection of bespoke shoes today!"
-    />
-    <meta
-      name="keywords"
-      content="handmade footwear, bespoke shoes, custom sandals, leather shoes, SH FEET, shfeet, SHFEET, sh_feet, SH_FEET,  sustainable footwear, comfortable shoes, stylish footwear, abuja footwear, nigerian footwear, nigerian shoes"
-    />
-    <meta name="author" content="SH FEET Team" />
+    <title>Coming Soon</title>
+    <style>
+      body {
+        margin: 0;
+        padding: 0;
+        height: 100vh;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        background: linear-gradient(135deg, #1a1a2e 0%, #16213e 100%);
+        overflow: hidden;
+        font-family: "Arial", sans-serif;
+      }
 
-    <!-- Open Graph / Facebook -->
-    <meta
-      property="og:title"
-      content="SH FEET | Handmade Footwear Crafted for Comfort & Style"
-    />
-    <meta
-      property="og:description"
-      content="Elevate your style with SH FEET's handcrafted footwear. Every pair is designed to combine art, comfort, and sophistication. Discover our collection!"
-    />
-    <meta
-      property="og:image"
-      content="https://res.cloudinary.com/daxeovezx/image/upload/w_1200,h_630,c_fill,q_auto,f_auto/v1732570642/shfeet_logo_l2iun6.jpg"
-    />
-    <meta property="og:url" content="https://shfeet.com.ng" />
-    <meta property="og:type" content="website" />
-    <meta property="og:site_name" content="SH FEET" />
+      .coming-soon {
+        position: relative;
+        width: 100%;
+        height: 100%;
+      }
 
-    <!-- Twitter -->
-    <meta name="twitter:card" content="summary_large_image" />
-    <meta
-      name="twitter:title"
-      content="SH FEET | Handmade Footwear Crafted for Comfort & Style"
-    />
-    <meta
-      name="twitter:description"
-      content="Experience unmatched elegance and comfort with SH FEET's bespoke footwear. Explore our range of handcrafted shoes today!"
-    />
-    <meta
-      name="twitter:image"
-      content="https://res.cloudinary.com/daxeovezx/image/upload/w_1200,h_630,c_fill,q_auto,f_auto/v1732570642/shfeet_logo_l2iun6.jpg"
-    />
+      .diagonal-text {
+        position: absolute;
+        top: 50%;
+        left: 50%;
+        transform: translate(-50%, -50%) rotate(-15deg);
+        font-size: 8vw;
+        font-weight: 900;
+        color: rgba(255, 255, 255, 0.8);
+        text-transform: uppercase;
+        letter-spacing: 0.5em;
+        text-shadow: 0 0 10px rgba(255, 255, 255, 0.3);
+        animation: pulse 3s ease-in-out infinite;
+        white-space: nowrap;
+      }
 
-    <!-- Additional Meta for Enhanced SEO -->
-    <link rel="canonical" href="https://shfeet.com.ng" />
-    <meta name="distribution" content="global" />
-    <meta name="rating" content="general" />
-    <meta name="subject" content="Handmade Footwear" />
-    <meta name="revisit-after" content="7 days" />
+      @keyframes pulse {
+        0%,
+        100% {
+          opacity: 0.8;
+          text-shadow: 0 0 10px rgba(255, 255, 255, 0.3);
+        }
+        50% {
+          opacity: 1;
+          text-shadow: 0 0 20px rgba(255, 255, 255, 0.6);
+        }
+      }
+
+      .corner-decoration {
+        position: absolute;
+        width: 200px;
+        height: 200px;
+        border: 2px solid rgba(255, 255, 255, 0.1);
+      }
+
+      .top-left {
+        top: 50px;
+        left: 50px;
+        border-right: none;
+        border-bottom: none;
+      }
+
+      .bottom-right {
+        bottom: 50px;
+        right: 50px;
+        border-left: none;
+        border-top: none;
+      }
+
+      .subtext {
+        position: absolute;
+        bottom: 30%;
+        left: 0;
+        right: 0;
+        text-align: center;
+        color: rgba(255, 255, 255, 0.5);
+        font-size: 1.2rem;
+        letter-spacing: 0.2em;
+      }
+
+      @media (max-width: 768px) {
+        .diagonal-text {
+          font-size: 15vw;
+          letter-spacing: 0.3em;
+        }
+      }
+    </style>
   </head>
-
   <body>
-    <div id="root"></div>
-    <!-- IMPORTANT: DO NOT REMOVE THIS SCRIPT TAG OR THIS VERY COMMENT! -->
-    <script src="https://cdn.gpteng.co/gptengineer.js" type="module"></script>
-    <script type="module" src="/src/main.tsx"></script>
+    <div class="coming-soon">
+      <div class="corner-decoration top-left"></div>
+      <div class="corner-decoration bottom-right"></div>
+      <div class="diagonal-text">Coming Soon</div>
+      <div class="subtext">Our website is under construction</div>
+    </div>
   </body>
 </html>
